# Agentic_MCP

./: .gitignore  LICENSE  reduce_token.bat
Document/: features.txt
Learnig/Sampling/: client.py  pyproject.toml  server.py
mcp-ai-system/: .gitignore  README.md  pyproject.toml  requirements.txt
mcp-ai-system/backend/app/: config.py  dependencies.py  main.py
mcp-ai-system/backend/app/api/routes/: agent.py  files.py  health.py
mcp-ai-system/backend/app/core/: logger.py  mcp_router.py  orchestrator.py  tool_registry.py
mcp-ai-system/backend/app/models/: agent.py  resume.py
mcp-ai-system/backend/app/services/: file_service.py
mcp-ai-system/backend/app/tools/: calc_tool.py  file_tool.py
mcp-ai-system/backend/app/utils/: file_utils.py  security.py
mcp-ai-system/backend/data/uploads/.metadata/: index.json
mcp-ai-system/scripts/: run_server.sh  setup_env.sh
